# aggregation_interpreter

./: CMakeLists.txt  big_endian.h  build.sh  column.h  generate_dataset.cc  interpreter.cc  interpreter.h  little_endian.h  main.cc  my_byteorder.h  record.cc  record.h
